# open-news-mcp

./: .env.example  .gitignore  README.md  alembic.ini  alembic.postgres.ini  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 20260308_000001_create_news_articles.py  20260308_000002_create_sources.py
commands/: sync.py  sync_feeds.py
playground/: query_news.ipynb  query_related_news_graph.ipynb  search_news.ipynb
src/: config.py
src/core/: feeds.py  gdelt.py  source_proxy.py
src/embedding/: __init__.py  base.py  factory.py  news.py
src/embedding/providers/: __init__.py  local.py  remote.py
src/store/: __init__.py  db.py  models.py  news.py  repository.py  sources.py
src/tools/: common.py  query.py  search.py  sources.py
src/vector/: __init__.py  base.py  factory.py
src/vector/providers/: __init__.py  qdrant.py
