[project]
name = "news-mcp"
version = "0.1.0"
description = "News MCP server backed by GDELT."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "feedparser>=6.0.11",
    "greenlet>=3.2.4",
    "httpx[socks]>=0.28.1",
    "ipykernel>=6.29.5",
    "mcp>=1.26.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
]
